# Vajra-Download-Manager

./: .gitattributes  .gitignore  .graphifyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  Justfile  LICENSE  README.md  SECURITY.md  build-all.bat  clippy_err.txt  clippy_output.txt  deny.toml  dev.bat  generate_icons.mjs  package-lock.json  package.json  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  COMPREHENSIVE_REVIEW.md  DEEP_DIVE.md  PLAN.md  TASK.md  WALKTHROUGH.md
installer/: README.md  Vajra.wxs  build_msi.ps1  install.ps1
scripts/: add-defender-exclusions.bat  build-daemon.bat  build-release.bat  compile-release.bat  run-daemon.bat  run-tauri.bat  setup-build-env.ps1  vajra.bat
vajra-cli/: Cargo.toml
vajra-cli/src/: main.rs
vajra-daemon/: Cargo.toml  vajra-daemon.service
vajra-daemon/src/: main.rs  rss_manager.rs  speed_history.rs
vajra-daemon/src/api/: handlers.rs  import.rs  mod.rs  router.rs  schema.rs  spider.rs  sse.rs  webdav.rs
vajra-daemon/tests/: api_tests.rs
vajra-engine/: Cargo.toml
vajra-engine/benches/: chunk_bench.rs
vajra-engine/examples/: test_magnet.rs
vajra-engine/src/: ab_test.rs  ai.rs  allocator.rs  captcha.rs  cloud.rs  constants.rs  content_pipeline.rs  cryptography.rs  db.rs  decryption.rs  download_task.rs  ffmpeg.rs  ftp_task.rs  hls.rs  lib.rs  metalink.rs  mirror.rs  multiplexer.rs  plugins.rs  post_processing.rs  queue.rs  rules.rs  s3.rs  state.rs  throttle.rs  torrent_task.rs  vault.rs  writer.rs  ytdlp.rs
vajra-engine/tests/: db_tests.rs  manager_tests.rs  state_tests.rs
vajra-extension/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
vajra-extension/public/: manifest.json
vajra-extension/src/: App.css  App.tsx  background.ts  content.ts  index.css
vajra-mobile/: app.json  package-lock.json  package.json
vajra-mobile/src/app/: index.tsx
vajra-protocol/: Cargo.toml
vajra-protocol/src/: lib.rs
vajra-ui-tauri/: .eslintrc.cjs  .prettierignore  build.bat  index.html  lint-results.json  lint-results2.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.js  vitest.config.ts
vajra-ui-tauri/scripts/: build-sidecar.mjs  fix_lints.py
vajra-ui-tauri/src/: App.tsx  ThemeContext.tsx  api.ts  audio.ts  i18n.ts  importExport.ts  index.css  main.tsx  setupTests.ts  types.ts  utils.ts
vajra-ui-tauri/src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
vajra-ui-tauri/src-tauri/assets/: convert.ps1  gen_bmp.ps1  license.txt  nsis-hooks.nsh
vajra-ui-tauri/src-tauri/capabilities/: main.json
vajra-ui-tauri/src-tauri/icons/: icon.icns
vajra-ui-tauri/src-tauri/src/: lib.rs  main.rs
vajra-ui-tauri/src/components/: BatchRenameDialog.tsx  Dashboard.tsx  DownloadsTable.test.tsx  DownloadsTable.tsx  ErrorBoundary.tsx  MenuBar.tsx  Sidebar.tsx  Toolbar.tsx
vajra-ui-tauri/src/components/Dialogs/: AboutDialog.tsx  AddUrlDialog.test.tsx  AddUrlDialog.tsx  DeleteDialog.tsx  GrabberDialog.tsx  HelpDialog.tsx  ImportContainerDialog.tsx  OnboardingModal.tsx  OptionsDialog.tsx  PropertiesDialog.tsx  RefreshUrlDialog.tsx  SchedulerDialog.tsx  SpiderDialog.tsx
vajra-ui-tauri/src/hooks/: useDialogEscape.ts  useFocusTrap.ts  useKeyboardShortcuts.ts
vajra-ui-tauri/src/locales/: de.json  en.json  es.json  ja.json  zh.json
vajra-ui-tauri/src/stores/: configStore.ts  downloadStore.ts  uiStore.ts
vajra-ui-tauri/src/types/: index.ts
vajra-ui-tauri/src/windows/: AddUrlWindow.tsx  DownloadCompleteWindow.tsx  DownloadFailedWindow.tsx  ProgressWindow.tsx
vajra-ui-tauri/tests/e2e/: smoke.spec.ts
