[package]
name    = "vajra-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "vajra"
path = "src/main.rs"

[[bin]]
name = "vdm"
path = "src/main.rs"

[dependencies]
tokio    = { version = "1", features = ["full"] }
reqwest  = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
clap     = { version = "4", features = ["derive", "color"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow   = "1"
uuid     = { version = "1", features = ["serde"] }
chrono   = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console  = "0.15"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

vajra-protocol = { path = "../vajra-protocol" }
