[package]
name = "vajra-ui-tauri"
version = "0.2.0"
description = "Vajra Download Manager"
authors = ["Vajra"]
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "vajra_ui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2.0.0"
tauri-plugin-updater = "2.10.1"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.6.0"
futures-util = "0.3.32"
tokio = { version = "1.52.3", features = ["time"] }
